Creato con Colaboratory

--- a/ML_hw_2.ipynb
+++ b/ML_hw_2.ipynb
@@ -7,7 +7,7 @@
       "name": "ML hw 2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPfIMtsk4DVrUlbgHjd8U9s",
+      "authorship_tag": "ABX9TyMQAGaMlUCBVmDnNGOEUHiT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -427,8 +427,8 @@
         "id": "S5kyKq8I2-Gq"
       },
       "source": [
-        "# Convolutional Neural Network\n",
-        "Contruction layer by layer of the selected CNN models"
+        "# Convolutional Neural Networks\n",
+        "Contruction layer by layer of all the implemented CNN models"
       ]
     },
     {
